# python-getcmd

./: .gitignore  README.txt  getcmd.cfg  getcmd.py  setup.cfg  setup.py
debian/: changelog  control  rules
debian/source/: options
