[metadata]
name = GetCMD
version = 0.1.0
author = Jordan Irwin
author_email = antumdeluge@gmail.com
summary = This is a summary
description = GetCMD Python library
long_description = file: README.txt
keywords =
license = MIT
url = https://github.com/AntumDeluge/python-getcmd
platforms = any

[files]
py_modules = getcmd
docs = LICENSE.txt

[bdist_wheel]
universal = 1
